--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Book_Loan_System
 excludes=
+file.reference.DateChooser.jar=jdatechooser/DateChooser.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\My Pc\\Documents\\NetBeansProjects\\NetBeansTools\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
